# ChangeLog for app-misc/gnote
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.16 2012/05/03 19:41:32 jdhore Exp $

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gnote-0.7.4.ebuild,
  gnote-0.8.2.ebuild, gnote-0.8.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gnote-0.8.3 (15 Apr 2012)

  15 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -gnote-0.8.1.ebuild,
  +gnote-0.8.3.ebuild:
  Version bump, fixes application quit with glib-2.32. Drop old.

*gnote-0.8.2 (15 Jan 2012)

  15 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -gnote-0.7.3.ebuild,
  +gnote-0.8.2.ebuild:
  Bump, improves toolbar for template notes, fixes various bugs. Drop old.

*gnote-0.8.1 (27 Oct 2011)

  27 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> +gnote-0.8.1.ebuild:
  Add gtk3-based gnote-0.8.1 from the gnome overlay.

  27 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> gnote-0.7.3.ebuild,
  gnote-0.7.4.ebuild:
  Slot gtkspell dependency to 2 in preparation for gtkspell-3.

*gnote-0.7.4 (02 May 2011)

  02 May 2011; Gilles Dartiguelongue <eva@gentoo.org> -gnote-0.7.2.ebuild,
  +gnote-0.7.4.ebuild:
  Version bump. Minor feature changes. Fix crashers and bugs, updated
  translations.

  07 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> gnote-0.7.2.ebuild,
  gnote-0.7.3.ebuild:
  Fix slot-deps on gtk+ and other libs

*gnote-0.7.3 (11 Nov 2010)

  11 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org> gnote-0.7.2.ebuild,
  +gnote-0.7.3.ebuild:
  Version bump. Fix build with gtk+-2.22, fix titles and keywords in various
  situations. Translation updates.

  20 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnote-0.6.1-dbus-switch.patch, -gnote-0.6.3.ebuild,
  -gnote-0.7.1.ebuild, gnote-0.7.2.ebuild:
  Clean up old revisions.

*gnote-0.7.2 (31 Mar 2010)

  31 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org> +gnote-0.7.2.ebuild: